2007-02-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Added vector analysis methods 
	VectorLengthDerivative(), VectorAngleDerivative(), 
	VectorTorsionDerivative()

	Removed SetEnergyCalculated and related methods for the moment.

	* src/forcefields/forcefieldghemical.cpp: Updated to use the vector
	analysis methods.
	
	* src/forcefields/forcefieldmmff94.cpp: Updated to use the vector
	analysis methods.

	* tools/obgen.cpp: Added -ff option.

	* tools/obenergy.cpp: Added. Calculate the energy of a molecule.
	
	* tools/obminimize.cpp: Added. Minimize the energy of a molecule.

2007-02-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/typer.cpp: Fix PR#1594657 -- long recursion for large
	multi-ring systems like fullerenes. This started by two calls to
	CheckAromaticity, including one allowing recursion depth of
	20. Discussion with Henry Rzepa suggested 14 as a reasonable
	cutoff.

	* src/forcefields/forcefieldmmff94.cpp: Fix compilation problem
	with call to NumericalDerivative.

2007-02-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: Some doxygen comments updated.

	* src/forcefield.cpp: Added SystematicRotorSearch(), uses RotamerList
	class to rotate all torsions, select the best conformation (lowest
	energy) and minimize it (1000 steps).

	SteepestDescent(int steps, int method) and 
	ConjugateGradients(int steps, int method): 
	the "int method" argument is added, can be set to
	OBFF_ANALYTICAL_GRADIENTS (default) or OBFF_NUMERICAL_GRADIENTS.

	Added ValidateGradientError(vector3 &numgrad, vector3 &anagrad):
	calculate the difference in % between the analytical and numerical
	gradient.

	NumericalDerivative(OBAtom *atom, int terms) and
	GetGradient(OBAtom *a, int terms):
	the added argument terms can be set to OBFF_ENERGY (total gradient,
	default), OBFF_EBOND (gradient for bond stretching), ... (Mainly used
	for ValidateGradients
